# plasma-reservoir

./: .gitignore  DEVLOG.md  PROTOCOL.md  README.md  ROADMAP.md  pyproject.toml
data/: README.md  plasma_data_apple_c.csv  plasma_data_apple_m.csv  plasma_data_with_amplifier.csv  plasma_data_without_amplifier.csv
experiments/: bayesnet_readout.py  real_data_diagnostic.py
plasma_rc/benchmarks/: mackey_glass.py  narma.py
plasma_rc/characterization/: dimensionality.py  memory_capacity.py  separation.py
plasma_rc/evaluation/: metrics.py
plasma_rc/readout/: __init__.py  bayesnet.py  linear.py
plasma_rc/reservoir/: __init__.py  digital_twin.py  interface.py  physical.py
tests/: test_bayesnet.py
