[project]
name = "plasma-rc"
version = "0.1.0"
description = "Plasma reservoir computing with Bayesian network readouts"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "networkx>=3.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["plasma_rc*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
